test/TestPhases/typechecker/invalid/VoidFuninExpr.blc
module

function calc()
    
end

activity main ()()
    let x = calc()
    await false
end
